# apikey-inspector

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml
apikey_inspector/: __init__.py  cli.py  detector.py  exceptions.py  inspector.py  privacy.py
apikey_inspector/adapters/: __init__.py  anthropic.py  base.py  cohere.py  google.py  huggingface.py  openai.py  unknown.py
apikey_inspector/formatters/: __init__.py  json_fmt.py  table.py
apikey_inspector/models/: provider.py  result.py
tests/: test_async_inspect.py  test_detector.py  test_privacy.py
