[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apikey-inspector"

keywords = [
    "api-key", "security-scanner", "openai", "anthropic", "gemini", 
    "secret-detection", "validation", "automation", "devsecops"
]

dynamic = ["version"]
description = "Identify and validate API keys for OpenAI, Anthropic, Gemini, and more with privacy-first masking."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Ali Hassan", email = "alihassan.shahzadmughal@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.25.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/AliHaSSan-13/apikey-inspector"
Repository = "https://github.com/AliHaSSan-13/apikey-inspector"
Issues = "https://github.com/AliHaSSan-13/apikey-inspector/issues"


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
apikey = "apikey_inspector.cli:app"

[tool.hatch.version]
path = "apikey_inspector/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
